Beginnings of CSRF protection system

--- a/ella.cabal
+++ b/ella.cabal
@@ -20,6 +20,7 @@ Library
         network >= 2.1,
         SHA >= 1.0.2,
         old-time >= 1.0.0,
+        unix >= 2.3,
         cgi >= 3001
   Exposed-Modules:
     Ella.Request, Ella.Response, Ella.GenUtils, Ella.Utils, Ella.Framework,
